apps/base/media/wizarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
    spec:
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr:latest

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 5690
          volumeMounts:
            - name: config
              mountPath: /data/datebase

            - name: database
              mountPath: /data/wizard_steps

      volumes:
        - name: config
          hostPath:
            path: /mnt/data/configs/wizard/wizard
            type: DirectoryOrCreate

        - name: database
          hostPath:
            path: /mnt/data/configs/wizard/database
            type: DirectoryOrCreate
