apps/base/media/wizarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: wizarr.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wizarr
                port:
                  number: 5690
